@@ -220,7 +220,9 @@ GtkItemFactoryEntry data_items[] = {
     { N_("/File/Create data set/time-series/high frequency/weekly"), 
       NULL, newdata_callback, 52, NULL }, 
     { N_("/File/Create data set/time-series/high frequency/daily (5-day week)"), 
-      NULL, newdata_callback, 5, NULL }, 
+      NULL, newdata_callback, 5, NULL },
+    { N_("/File/Create data set/time-series/high frequency/daily (6-day week)"), 
+      NULL, newdata_callback, 6, NULL },
     { N_("/File/Create data set/time-series/high frequency/daily (7-day week)"), 
       NULL, newdata_callback, 7, NULL }, 
     { N_("/File/Create data set/time-series/high frequency/hourly"), 
@@ -383,6 +385,7 @@ GtkItemFactoryEntry data_items[] = {
     { N_("/Sample/Remove case _markers"), NULL, do_remove_markers, 0, NULL },
     { N_("/Sample/sep5"), NULL, NULL, 0, "<Separator>" },
     { N_("/Sample/Restructure panel..."), NULL, panel_restructure_dialog, 0, NULL },
+    { N_("/Sample/Transpose data..."), NULL, gui_transpose_data, 0, NULL },
 
     /* Variable menu */
     { N_("/_Variable"), NULL, NULL, 0, "<Branch>" },
