@@ -269,6 +269,8 @@ GtkItemFactoryEntry data_items[] = {
       NULL, newdata_callback, 52, NULL, GNULL }, 
     { N_("/File/Create data set/time-series/high frequency/daily (5-day week)"), 
       NULL, newdata_callback, 5, NULL, GNULL }, 
+    { N_("/File/Create data set/time-series/high frequency/daily (6-day week)"), 
+      NULL, newdata_callback, 6, NULL, GNULL }, 
     { N_("/File/Create data set/time-series/high frequency/daily (7-day week)"), 
       NULL, newdata_callback, 7, NULL, GNULL }, 
     { N_("/File/Create data set/time-series/high frequency/hourly"), 
@@ -443,6 +445,7 @@ GtkItemFactoryEntry data_items[] = {
     { N_("/Sample/Remove case _markers"), NULL, do_remove_markers, 0, NULL, GNULL },
     { N_("/Sample/sep5"), NULL, NULL, 0, "<Separator>", NULL },
     { N_("/Sample/Restructure panel..."), NULL, panel_restructure_dialog, 0, NULL, GNULL },
+    { N_("/Sample/Transpose data..."), NULL, gui_transpose_data, 0, NULL, GNULL },
 
     /* Variable menu */
     { N_("/_Variable"), NULL, NULL, 0, "<Branch>", NULL },
