@@ -1,4 +1,7 @@
 version 1.3.1
+- Add new dataset structure "wizard" in place of the old dialogs
+  for setting frequency, starting observation and time-series
+  or panel interpretation of the data
 - Add FIML and LIML estimation to system command; also add 
   LR over-identification tests for these systems
 - Add Hansen-Sargan over-identification test for SUR and 3SLS
@@ -24,6 +27,10 @@ version 1.3.1
   puts the const into the list of variables
 - Fix bug in forecasts with standard errors, for case of missing
   observations
+- Fix bug in reading of CSV files: crash if variable names were not
+  found, but observation markers were found
+- Add new option under Sample menu, "Transpose data" (for data that
+  were read in "sideways" from, e.g., a CSV file
 
 11/15/2004 version 1.3.0
 - add "append" command, to append data to the current dataset,
